trunk/Archive/03e4144bed66febec67e023ed5669a54-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:5:1: error: expected ‘;’ after struct definition
 }
 ^
main.cpp: In function ‘int main()’:
main.cpp:10:13: error: increment of read-only variable ‘C’
     Lounge<C++> cpp;
             ^
main.cpp:10:13: error: expression ‘(C ++)’ is not a constant-expression
main.cpp:10:15: error: expression ‘(C ++)’ is not a constant-expression
     Lounge<C++> cpp;
               ^
main.cpp:10:15: note: in template argument for type ‘int’ 
main.cpp:10:20: error: invalid type in declaration before ‘;’ token
     Lounge<C++> cpp;
                    ^
main.cpp:10:17: warning: unused variable ‘cpp’ [-Wunused-variable]
     Lounge<C++> cpp;
                 ^
